--- a/tetris/package.json
+++ b/tetris/package.json
@@ -19,8 +19,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -34,22 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "main": "index.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/listenToRipley/tetris.git"
-  },
-  "keywords": [
-    "tetris",
-    "mintbean"
-  ],
-  "author": "vanessa, scott, natalie",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/listenToRipley/tetris/issues"
-  },
-  "homepage": "https://github.com/listenToRipley/tetris#readme",
-  "description": ""
+  }
 }
