--- a/tetris/package.json
+++ b/tetris/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "typescript": "^4.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -36,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "resolutions": {
-    "styled-components": "^5"
+  "devDependencies": {
+    "@babel/core": "^7.13.10"
   }
 }
